--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -8,7 +8,7 @@
             <input type="text" id="searchInput" name="search_InvigilationTimetable" placeholder="Search..." value="{{ search_InvigilationTimetable }}" style="border-radius: 6px; width: 100%;">
             <i class="fa fa-search" id="searchBtn" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
         </div>
-        <div class="button-wrapper">
+        <div class="button-wrapper" style="margin-bottom: auto;">
             <button id="generatePDF" style="background-color: black;">Download as PDF</button>
         </div>
     </div>
